mvneta: configure multiple PHYs from device tree
The device tree can define multiple PHYs. At the moment, only the phy-def is
used or the original way of searching for a phy is used.

Signed-off-by: Jan Viktorin <iviktorin@fit.vutbr.cz>

--- a/arch/arm/boot/dts/armada-385-turris-omnia.dts
+++ b/arch/arm/boot/dts/armada-385-turris-omnia.dts
@@ -175,16 +175,21 @@
 
 			ethernet@34000 {
 				status = "okay";
-				phy-mode = "sgmii";
-			/*	managed = "in-band-status";
+ 
+				phy-def {
+					phy-mode = "sgmii";
+					phy = <&phy1>;
+ 				};
 
-				fixed-link {
-					speed = <1000>;
-					full-duplex;
+				phy-sfp {
+					phy-mode = "sgmii";
+					managed = "no";
+ 
+					fixed-link {
+						speed = <1000>;
+						full-duplex;
+					};
 				};
-			*/
-
-				phy = <&phy1>;
 			};
 
 			sdhci@d8000 {
