Omnia: Add support for 1000BASE-X
Add another parameter for managed property of the phy switch subnode.
Possible values are no, in-band-status and 1000base-x.

--- a/arch/arm/boot/dts/armada-385-turris-omnia.dts
+++ b/arch/arm/boot/dts/armada-385-turris-omnia.dts
@@ -183,7 +183,7 @@
 
 				phy-sfp {
 					phy-mode = "sgmii";
-					managed = "no";
+                                	managed = "1000base-x";
  
 					fixed-link {
 						speed = <1000>;
