--- a/arch/arm/boot/dts/armada-385-turris-omnia.dts
+++ b/arch/arm/boot/dts/armada-385-turris-omnia.dts
@@ -108,6 +108,22 @@
 						#size-cells = <0>;
 						reg = <6>;
       					};
+
+					i2c@7 {
+						/* SFP+ GPIO expander */
+						#address-cells = <1>;
+						#size-cells = <0>;
+						reg = <7>;
+
+						sfpgpio: gpio@71 {
+							compatible = "nxp,pca9538";
+							reg = <0x71>;
+							interrupt-parent = <&gpio1>;
+							interrupts = <14 IRQ_TYPE_LEVEL_LOW>;
+							gpio-controller;
+							#gpio-cells = <2>;
+						};
+					};
 				};
 			};
 
